# SpideypediaBackend

./: .gitignore  Cargo.toml  Dockerfile
src/: app_state.rs  encryption.rs  main.rs  minio_client.rs  mongo_handler.rs  my_errors.rs  redis_handler.rs
src/routes/: auth.rs  get_comic_collection.rs  json_responses.rs  mod.rs  route_errors.rs  update_comic_collection.rs
