[package]
name = "rustos"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros", "multipart", "ws"] }
axum-extra = "0.12.1"
dotenvy = "0.15.7"
futures-util = "0.3.31"
mongodb = "3.3.0"
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing-subscriber = "0.3.20"
hex = "0.4.3"
openssl = "0.10"
rand = "0.8.5"
once_cell = "1.19.0"
minio = "0.3.0"
bytes = "1.11.0"
thiserror = "2.0.17"
